tests/sksl/errors/BadOctal.glsl
### Compilation failed:

error: 1: '08' is not a valid octal number
int i1 = 08;
         ^^
error: 1: expected expression, but found '08'
int i1 = 08;
         ^^
2 errors
